WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107164
Fix a logic error in AuthenticationChallengeMac
https://bugs.webkit.org/show_bug.cgi?id=107164
Summary
Fix a logic error in AuthenticationChallengeMac
Alexey Proskuryakov
Reported
2013-01-17 13:04:34 PST
AuthenticationChallenge::setAuthenticationClient creates a dummy m_nsChallenge if there was none. We do not want incorrect fields like this, as they may be picked up by callers. I don't think that this causes any observable badness yet, even though this code path is hit in NetworkProcess authentication delegates.
Attachments
proposed patch
(3.64 KB, patch)
2013-01-17 13:16 PST
,
Alexey Proskuryakov
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-01-17 13:16:46 PST
Created
attachment 183255
[details]
proposed patch
Alexey Proskuryakov
Comment 2
2013-01-17 13:52:21 PST
Committed <
http://trac.webkit.org/changeset/140037
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug