        Fix a logic error in AuthenticationChallengeMac         https://bugs.webkit.org/show_bug.cgi?id=107164

Reviewed by Brady Eidson.

        No new tests, as this is not currently observable.

        * platform/network/cf/AuthenticationCF.cpp:
        (WebCore::createCF): Added a FIXME about making this more like Mac counterpart.

        * platform/network/cf/AuthenticationChallenge.h:
        (AuthenticationChallenge): Corrected an slightly misleading explanation.

        * platform/network/mac/AuthenticationMac.mm:
        (WebCore::AuthenticationChallenge::setAuthenticationClient): Don't create a dummy
        m_nsChallenge object in place of a nil one.



Canonical link: https://commits.webkit.org/125404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140037 268f45cc-cd09-0410-ab3c-d52691b4dbfc